--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<title> Hello </title>
+---
+layout: site
+---
+
+{% for post in site.posts %}
+<article>
+  <header>
+    <hgroup>
+      <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+    </hgroup>
+  </header>
+  {{ post.content }}
+</article>
+{% endfor %}
